# sharesafe-lib

./: .haskell-ci  .travis.yml  LICENSE  README.md  package.yaml  sharesafe-lib.cabal  stack.yaml
app/: Main.hs
app/Prime/App/: Env.hs  Monad.hs
src/Prime/: Secret.hs
src/Prime/Common/: Base.hs  Conduit.hs  Docs.hs  JSON.hs  NAR.hs  PEM.hs  Persistent.hs  Time.hs
src/Prime/Secret/: Cipher.hs  Client.hs  Keys.hs  Password.hs  Signing.hs
src/Prime/Servant/: Api.hs  Client.hs  Models.hs  Monad.hs  PrimeApi.hs  Session.hs
src/Prime/Servant/PrimeApi/: Enroll.hs  Login.hs  Sharing.hs
tests/: Main.hs  sharesafe-test.sh
tests/Test/Prime/: Common.hs  Secret.hs
tests/Test/Prime/Common/: JSON.hs  NAR.hs  Persistent.hs  Time.hs
tests/Test/Prime/Secret/: Cipher.hs  Client.hs  Keys.hs  Password.hs  Signing.hs
